Update requires.js, main.js, and 2 more files... - correct the problem with require() by adding contextIsolation: false to webPreferences - replacing the built-in remote module in Electron, which is deprecated since Electron 10 and will eventually be removed, by @electron/remote

--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
-    "name"    : "DICe",
-    "version" : "2.0.0",
-    "main"    : "main.js"
+    "name": "DICe",
+    "version": "2.0.0",
+    "main": "main.js",
+    "dependencies": {
+        "@electron/remote": "^2.0.8"
+    }
 }
